Add companyName and companyDomainName to vendor Model
