# backend/controllers/customer.js
@@ -7,7 +7,7 @@ const Constants = require("./../util/constants");
 
 // #TODO BIRTHDAY EKLEMELI MIYIM?
 exports.signupController = BaseUtil.createController((req) => {
-  let { email, password, passwordConfirm, name, lastName, telephoneNumber, birthday } = req.query;
+  let { email, password, passwordConfirm, name, lastName } = req.query;
   email = typeof email == "string" ? email.toLowerCase() : ""; // if it is not valid, validateEmail will reject it
   return BB.all([
     AppValidator.validatePassword(
@@ -30,8 +30,6 @@ exports.signupController = BaseUtil.createController((req) => {
         password,
         name,
         lastName,
-        telephoneNumber,
-        birthday,
       })
     );
 });
