# backend/swagger.json
@@ -21,92 +21,9 @@
   "consumes": ["application/json"],
   "produces": ["application/json"],
   "paths": {
-    "/client/init": {
+    "/customer/signup": {
       "post": {
-        "parameters": [
-          {
-            "in": "query",
-            "name": "tokenCode",
-            "description": "token code",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "successful operation",
-            "schema": {
-              "$ref": "#/definitions/ClientWithToken"
-            }
-          },
-          "401": {
-            "description": "Invalid token code"
-          }
-        }
-      }
-    },
-    "/client/login": {
-      "post": {
-        "parameters": [
-          {
-            "in": "query",
-            "name": "password",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "in": "query",
-            "name": "email",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "in": "query",
-            "name": "type",
-            "required": true,
-            "type": "string",
-            "enum": ["CLIENT", "VENDOR"]
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "successful operation",
-            "schema": {
-              "$ref": "#/definitions/ClientWithToken"
-            }
-          },
-          "400": {
-            "description": "Invalid email or password or type"
-          }
-        }
-      }
-    },
-    "/client/verifyEmail": {
-      "get": {
-        "parameters": [
-          {
-            "in": "query",
-            "name": "verifyEmailToken",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "successful operation",
-            "schema": {
-              "returnMessage": "Client is now verified!!",
-              "$ref": "#/definitions/OnlyClient"
-            }
-          },
-          "400": {
-            "description": "Insufficient token"
-          }
-        }
-      }
-    },
-    "/client/signup": {
-      "post": {
+        "tags": ["customer"],
         "parameters": [
           {
             "in": "query",
@@ -160,8 +77,71 @@
         }
       }
     },
-    "/client/changePassword": {
+    "/customer/login": {
       "post": {
+        "tags": ["customer"],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "password",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "query",
+            "name": "email",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "query",
+            "name": "type",
+            "required": true,
+            "type": "string",
+            "enum": ["CLIENT", "VENDOR"]
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/ClientWithToken"
+            }
+          },
+          "400": {
+            "description": "Invalid email or password or type"
+          }
+        }
+      }
+    },
+    "/customer/verifyEmail": {
+      "get": {
+        "tags": ["customer"],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "verifyEmailToken",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "returnMessage": "Client is now verified!!",
+              "$ref": "#/definitions/OnlyClient"
+            }
+          },
+          "400": {
+            "description": "Insufficient token"
+          }
+        }
+      }
+    },
+    "/customer/changePassword": {
+      "post": {
+        "tags": ["customer"],
         "parameters": [
           {
             "in": "query",
@@ -193,8 +173,9 @@
         }
       }
     },
-    "/client/signupWithGoogle": {
+    "/customer/signupWithGoogle": {
       "post": {
+        "tags": ["customer"],
         "parameters": [
           {
             "in": "query",
@@ -232,8 +213,9 @@
         }
       }
     },
-    "/client/loginWithGoogle": {
+    "/customer/loginWithGoogle": {
       "post": {
+        "tags": ["customer"],
         "parameters": [
           {
             "in": "query",
@@ -271,8 +253,9 @@
         }
       }
     },
-    "/client/forgotPassword": {
+    "/customer/forgotPassword": {
       "post": {
+        "tags": ["customer"],
         "parameters": [
           {
             "in": "query",
@@ -299,8 +282,304 @@
         }
       }
     },
-    "/client/resetPassword": {
+    "/customer/resetPassword": {
       "post": {
+        "tags": ["customer"],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "resetPasswordToken",
+            "description": "Reset Password Token",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "query",
+            "name": "newPassword",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "query",
+            "name": "newPasswordCheck",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation"
+          },
+          "400": {
+            "description": "Invalid resetPasswordToken or newPassword or newPasswordCheck"
+          }
+        }
+      }
+    },
+    "/vendor/signup": {
+      "post": {
+        "tags": ["vendor"],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "name",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "query",
+            "name": "lastName",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "query",
+            "name": "email",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "query",
+            "name": "password",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "query",
+            "name": "passwordConfirm",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "query",
+            "name": "type",
+            "required": true,
+            "type": "string",
+            "enum": ["CLIENT", "VENDOR"]
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "returnMessage": "Verification email sent!",
+              "$ref": "#/definitions/OnlyClient"
+            }
+          },
+          "400": {
+            "description": "Invalid email or password or type"
+          }
+        }
+      }
+    },
+    "/vendor/login": {
+      "post": {
+        "tags": ["vendor"],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "password",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "query",
+            "name": "email",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "query",
+            "name": "type",
+            "required": true,
+            "type": "string",
+            "enum": ["CLIENT", "VENDOR"]
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/ClientWithToken"
+            }
+          },
+          "400": {
+            "description": "Invalid email or password or type"
+          }
+        }
+      }
+    },
+    "/vendor/verifyEmail": {
+      "get": {
+        "tags": ["vendor"],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "verifyEmailToken",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "returnMessage": "Client is now verified!!",
+              "$ref": "#/definitions/OnlyClient"
+            }
+          },
+          "400": {
+            "description": "Insufficient token"
+          }
+        }
+      }
+    },
+    "/vendor/changePassword": {
+      "post": {
+        "tags": ["vendor"],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "tokenCode",
+            "description": "token code",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "query",
+            "name": "newPassword",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "query",
+            "name": "newPasswordRepeat",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation"
+          },
+          "400": {
+            "description": "Invalid password"
+          }
+        }
+      }
+    },
+    "/vendor/signupWithGoogle": {
+      "post": {
+        "tags": ["vendor"],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "email",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "query",
+            "name": "googleID",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "query",
+            "name": "type",
+            "required": true,
+            "type": "string",
+            "enum": ["CLIENT", "VENDOR"]
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "message": "You succesfully signed up",
+              "$ref": "#/definitions/ClientWithToken"
+            },
+            "returnCode": 0,
+            "returnMessage": "Success"
+          },
+          "400": {
+            "description": "Invalid email, type or googleID"
+          }
+        }
+      }
+    },
+    "/vendor/loginWithGoogle": {
+      "post": {
+        "tags": ["vendor"],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "email",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "query",
+            "name": "googleID",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "query",
+            "name": "type",
+            "required": true,
+            "type": "string",
+            "enum": ["CLIENT", "VENDOR"]
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "message": "You succesfully logged in",
+              "$ref": "#/definitions/ClientWithToken"
+            },
+            "returnCode": 0,
+            "returnMessage": "Success"
+          },
+          "400": {
+            "description": "Invalid email, type or googleID"
+          }
+        }
+      }
+    },
+    "/vendor/forgotPassword": {
+      "post": {
+        "tags": ["vendor"],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "email",
+            "description": "Email Address",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "query",
+            "name": "type",
+            "required": true,
+            "type": "string",
+            "enum": ["CLIENT", "VENDOR"]
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "successful operation"
+          },
+          "400": {
+            "description": "Invalid e-mail or type."
+          }
+        }
+      }
+    },
+    "/vendor/resetPassword": {
+      "post": {
+        "tags": ["vendor"],
         "parameters": [
           {
             "in": "query",
@@ -333,6 +612,7 @@
       }
     }
   },
+
   "definitions": {
     "Client": {
       "type": "object",
